# kaggle-ps-s04e05

./: .gitignore  Makefile  README.md  config.yaml  parse_yaml.py  pyproject.toml
builds/1/: config.yaml
builds/123/: config.yaml
builds/2/: config.yaml
builds/456/: config.yaml
notebooks/: exploratory-analysis.ipynb
src/: config.py  download_data.py  feature_engineering.py  feature_selection.py  logging_config.py  model.py  optimize.py  preprocess.py  train.py
src/feature_engineering/: feature_engineering.py  feature_engineering1.py
src/models/: cat_boost.py  lgbm.py  xgb.py
src/utils/: kaggle_api.py
